# cosmic-reach-python

./: .gitignore  README.md  client.py  pyproject.toml  update_jars.py
cosmic_reach/client/: base.py  client.py
cosmic_reach/common/: events.py  types.py
cosmic_reach/io/: htypes.py  serializer.py  types.py
cosmic_reach/protocol/enums/: __init__.py
cosmic_reach/protocol/packets/: blocks.py  entities.py  general.py  meta.py  sounds.py
cosmic_reach/server/: general.py
cosmic_reach/types/json/: accounts.py  entities.py  java.py
cosmic_reach/versions/: __init__.py  enums.py
src/client/: __init__.py  base.py  client.py
src/common/: events.py  types.py
src/io/: serializer.py  types.py  wjson.py
src/protocol/: __init__.py  generic.py
src/protocol/packets/: __init__.py  blockentities.py  blocks.py  entities.py  general.py  items.py  meta.py  sounds.py
src/server/: __init__.py  base.py  server.py
src/types/: __init__.py  accounts.py  entities.py  java.py
src/types/json/: __init__.py  accounts.py  java.py
src/versions/: types.py
