[project]
name = "UNNAMED"
version = "0.0.1"
description = ""
authors = [
    {name = "JoJoJux",email = "80523427+J0J0HA@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
